--- a/frontend/src/Utils/Design-Tokens/_variables.scss
+++ b/frontend/src/Utils/Design-Tokens/_variables.scss
@@ -5,6 +5,8 @@ $color-white-shade-3  : #f4f7fa;
 $color-white-shade-4  : #e0e0e0;
 $color-white-shade-5  : #dadada;
 $color-white-shade-6  : #f2f2f2;
+$color-white-shade-7  : #f1f1f1;
+
 
 //---- Black Color Shade ----//
 $color-black-shade-1: #000000;
@@ -21,6 +23,12 @@ $signup-profileimg-shade-1: #b9b9b9;
 $signup-separator: #616161;
 $signup-btn-disabled: #cccccc;
 $signup-btn-disabled-border: #c5c5c5;
+
+//---- Event Card Shades ----//
+$event-rsvp-icon: #cbff8f;
+$event-heart-icon: #d32f2f;
+$event-trash-icon: #795548;
+$event-trash-hover: #4a291d;
 
 //---- Error Shades ----//
 $signup-form-invalid-input: #eb2e24;
